feat(api): summary of api calls of last 7 days
