# packages/backend/helpers/endPointLoggerMiddleWare.ts
@@ -2,6 +2,7 @@ import { Request, Response, NextFunction } from 'express';
 import redis from '../redis/client';
 import { logError } from './logger';
 import prisma from '../prisma/client';
+import { getDateWithShortMonth } from './timeZoneHelper';
 // @FIXME Add logic for error
 const endpointLogger = () => async (req: Request, res: Response, next: NextFunction) => {
     try {
@@ -31,6 +32,19 @@ const endpointLogger = () => async (req: Request, res: Response, next: NextFunct
             throw new Error("Account doesn't exist");
         }
         await redis.INCR(`request_count_${environment.id}`);
+
+        // Summary of Api Calls by date for last 7 days + 1 buffer day
+        const key = `summary_api_calls_${environment.id}`;
+        await redis.hIncrBy(key, getDateWithShortMonth(), 1);
+        const isExpiryExist = await redis.ttl(key); // -1 means expiry doesn't exist, -2 means key doesn't exist
+
+        if (isExpiryExist === -1) {
+            const isExpirySet = await redis.expire(key, 60 * 60 * 24 * 8);
+            if (!isExpirySet) {
+                console.error(isExpirySet);
+            }
+        }
+
         next();
     } catch (error: any) {
         logError(error);
