# packages/backend/oas/openapi.yml
@@ -3860,6 +3860,17 @@ components:
         - method
         - path
         - status
+    commonSummaryApiCalls:
+      title: commonSummaryApiCalls
+      type: object
+      properties:
+        date:
+          type: string
+        numberOfCalls:
+          type: integer
+      required:
+        - date
+        - numberOfCalls
     commonAnalytics:
       title: commonAnalytics
       type: object
@@ -3883,6 +3894,11 @@ components:
           nullable: true
         totalApiCalls:
           type: integer
+          nullable: true
+        summaryApiCalls:
+          type: array
+          items:
+            $ref: '#/components/schemas/commonSummaryApiCalls'
           nullable: true
       required:
         - totalConnections
